# jumanpp-grpc

./: .dockerignore  CMakeLists.txt  Dockerfile
cmake/: common.cmake  gRPC.cmake
src/jumandic/: CMakeLists.txt
